--- a/test/fixtures/stories.yml
+++ b/test/fixtures/stories.yml
@@ -5,11 +5,11 @@ one:
   user: one
   title: MyString
   subtitle: MyString
-  status: MyString
+  status: draft
 
 two:
   account: two
   user: two
   title: MyString
   subtitle: MyString
-  status: MyString
+  status: draft
